--- a/src/app/history/page.module.css
+++ b/src/app/history/page.module.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 1em;
+    margin-bottom: 3em;
 }
 
 .BlockTwo {
@@ -94,6 +95,44 @@
     height: auto;
 }
 
+.indice {
+    display: grid;
+    place-content: center;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+.subIndice {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    color: black;
+    padding-left: 10px;
+    padding-right: 7px;
+    gap: 5px;
+    border-radius: 1em;
+}
+
+.subIndice p {
+    background: transparent;
+}
+
+.subIndice:hover {
+    background: #fff;
+}
+
+.imgIndice {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    background: transparent;
+}
+
+.iconIndice {
+    width: 60%;
+    height: auto;
+    background: transparent;
+}
+
 @keyframes show {
     from {
         opacity: 0;
@@ -118,7 +157,7 @@
     }
 
     .iconMain {
-        width: 10vh;
+        width: 13vh;
         height: auto;
     }
     
